build: creating initial page

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,27 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="light">
     <ion-title>
-      Tab 1
+      <img src="../../assets/logo.png" alt="Pokémons" />
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <img src="../../assets/banner.svg" alt="Bonner Pokémon" />
 
-  
+  <ion-card-content>
+    <div class="texto-conteudo">
+      <h1>
+        Qual pokemon você escolheria?
+        <div class="retangulo"></div>
+      </h1>
+      <p>
+        Você pode saber o tipo de Pokémon, seus pontos fortes, fracos e
+        habilidades.
+      </p>
+    </div>
+    <div class="btnInicio">
+      <p>Ver pokémons</p>
+    </div>
+  </ion-card-content>
 </ion-content>
